--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "jose": "^4.15.4",
     "jsonld": "^8.3.1",
     "node-jose": "^2.2.0",
     "ts-node": "^10.9.1",
