--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "verifiable-credential-signer",
-  "version": "1.0.0",
+  "name": "@fabianscheidt/verifiable-credential-signer",
+  "version": "1.1.0",
   "description": "Signs arbitrary verifiable credentials and presentations",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "license": "MIT",
   "scripts": {
-    "start": "ts-node --transpile-only src/index.ts"
+    "start": "ts-node --transpile-only src/main.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "express": "^4.18.2",
