feat: add toggle between different signature flavours
The specification of JSON Web Signature 2020 is not specific about how the payload is assembled. As a consequence, services related to "Gaia-X" have implemented a suite that differs from other implementations. The spec provides a list of test vectors to validate implementations. This adds an implementation that works with the test vectors and adds unit tests to validate this behaviour.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fabianscheidt/verifiable-credential-signer",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Signs arbitrary verifiable credentials and presentations",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,6 +10,7 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node --transpile-only src/main.ts",
+    "test": "node --test --require ts-node/register src/*.spec.ts",
     "build": "tsc"
   },
   "dependencies": {
