--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node --transpile-only src/main.ts",
+    "format": "prettier --write .",
+    "lint": "eslint .",
     "test": "node --test --require ts-node/register src/*.spec.ts",
     "build": "tsc"
   },
@@ -24,6 +26,10 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jsonld": "^1.5.10",
-    "@types/node-jose": "^1.1.10"
+    "@types/node-jose": "^1.1.10",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "prettier": "^3.2.5"
   }
 }
