--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fabianscheidt/verifiable-credential-signer",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Signs arbitrary verifiable credentials and presentations",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -16,20 +16,19 @@
     "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "jose": "^4.15.4",
-    "jsonld": "^8.3.1",
+    "express": "^4.21.0",
+    "jose": "^5.9.3",
+    "jsonld": "^8.3.2",
     "node-jose": "^2.2.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/jsonld": "^1.5.10",
-    "@types/node-jose": "^1.1.10",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "eslint": "^8.57.0",
-    "prettier": "^3.2.5"
+    "@types/express": "^4.17.21",
+    "@types/jsonld": "^1.5.15",
+    "@types/node-jose": "^1.1.13",
+    "eslint": "^9.11.1",
+    "prettier": "^3.3.3",
+    "typescript-eslint": "^8.7.0"
   }
 }
