--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -19,13 +19,13 @@ jobs:
           node-version: 20
 
       - name: Install Project Dependencies
-        run: yarn install
+        run: npm install
 
       - name: Check Code Format
         run: npx prettier --check .
 
       - name: Lint Code
-        run: yarn lint
+        run: npm run lint
 
       - name: Run Tests
-        run: yarn test
+        run: npm run test
